<resources>
            <string name="app_name">Smart<b>EFB</b></string>
            <string name="editTextInputFilterTextAlphaNumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789ÄäÖöÜüß +-,;.:()§*!=?</string>
            <string name="infoTextCountLettersForComment">%1$s von %2$d Zeichen</string>
            <string name="settingsEfbFragmentCDataPrivacyHeadineText">Datenschutz</string>
            <string name="settingsEfbFragmentCDataPrivacyText">Personenbezogene Daten werden in der App/ Server nur gespeichert, sofern Sie oder Ihre Beraterinnen oder Berater diese über die App-Funktionen oder das Backend (Übergabebuch, Absprachen, Ziele, Kommentare, Nachrichten, etc.) eingeben. Eine weitergehende elektronische Verarbeitung oder Weitergabe an Dritte findet nicht statt. Es werden keine personenbezogenen Daten von Ihrem Smartphone durch die App übertragen, beispielsweise Adress- und Kontaktbücher, Anruferlisten oder SMS-Verläufe.\nDie Beratungsfälle werden mit einer eindeutigen Nummer (Fallnummer) gekennzeichent, die eine Verknüpfug mit der Papierakte Ihrer Beraterinnen und Berater zulässt.\nDie Pin-Nummer zur Verbindungsherstellung zwischen App und Server (Backend) dient zum erstmaligen Austausch und wird durch eine lange zufällige und eindeutige Zeichenkette ersetzt. Anhand dieser Zeichenkette ist Ihre App eindeutig durch den Server zu erkennen. Diese Zeichenkette enthält keine personenbezogenen Merkmale und entsteht durch einen Zufallsprozess.\nWenn Sie über die Nachrichtenfunktion Kontakt zu den Beraterinnen oder Beratern der Beratungsstellen aufnehmen, wird hierzu ebenfalls eine eindeutige Zufallsnummer erzeugt, anhand derer Ihr Smartphone vom Server eindeutig erkannt werden kann. Über diese Zufallsnummer sind keine Rückschlüsse auf Ihre Person möglich.\nDie Kommunikation zwischen App und Server ist durch eine Verschlüsselung (https) geschützt.\n Die App fragt in regelmäßigen Abständen beim Server an, ob neue Inhalte vorliegen. Dies kann Sie nur, wenn Sie im Vorder- oder Hintergrund läuft.\n Wenn die App nicht gestartet ist, werden keine Anfragen gestellt. Es finden dann aber auch beispielsweise keine Erinnerungen an anstehende Termine statt.\nIm Rahmen des Projektes findet eine wissenschaftliche Befragung und Auswertung statt. Die verwendeten Fragebögen lassen keine Rückschlüsse auf bestimmte Personen zu und sind daher anonym.\n</string>
            <string name="settingsEfbFragmentCDataPrivacyLinkText">Die ausführliche Datenschutzerklärung finden Sie <a href="smart.efb.deeplink://linkin/settings?com=open_link_dataprivacy_external">hier</a></string>
            <string name="settingsEfbFragmentCDataPrivacyManagerHeadineText">Datenschutzbeauftragter</string>
            <string name="settingsEfbFragmentCDataPrivacyManagerText">Wenn Sie Fragen zum Datenschutz haben, schreiben Sie uns bitte eine E-Mail (gs@gfb-potsdam.de) oder wenden Sie sich direkt an die für den Datenschutz verantwortliche Person in unserer Organisation:\n\nAtlas Informationssysteme GmbH\nHerrn Detlev Voigt\nCarl-Reichstein-Str. 7/9\n14770 Brandenburg an der Havel\n03381/529316\ndvoigt@atlas-brb.de</string>
            <string name="settingsEfbFragmentCLinksHeadineText">Externe Verlinkungen</string>
            <string name="settingsEfbFragmentCLinksText">Unser Angebot enthält Links zu externen Webseiten Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung nicht erkennbar. Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen.</string>
            <string name="settingsEfbFragmentCHelpForAppHeadineText">Weitere Fragen zur App</string>
            <string name="settingsEfbFragmentCHelpForAppText">Wenn Sie weitere Fragen zur App haben, schauen Sie bitte <a href="smart.efb.deeplink://linkin/faq?com=show_section2">hier</a> nach.</string>
            <string name="popupItemOurArrangementArrangement1"><b>Absprache 1 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement2"><b>Absprache 2 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement3"><b>Absprache 3 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement4"><b>Absprache 4 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement5"><b>Absprache 5 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement6"><b>Absprache 6 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement7"><b>Absprache 7 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement8"><b>Absprache 8 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement9"><b>Absprache 9 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement10"><b>Absprache 10 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement11"><b>Absprache 11 kommentieren</b></string>
            <string name="popupItemOurArrangementArrangement12"><b>Absprache 12 kommentieren</b></string>
            <string name="popupItemOurArrangementSketchArrangement1"><b>Entwurf 1 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement2"><b>Entwurf 2 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement3"><b>Entwurf 3 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement4"><b>Entwurf 4 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement5"><b>Entwurf 5 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement6"><b>Entwurf 6 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement7"><b>Entwurf 7 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement8"><b>Entwurf 8 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement9"><b>Entwurf 9 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement10"><b>Entwurf 10 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement11"><b>Entwurf 11 einschätzen</b></string>
            <string name="popupItemOurArrangementSketchArrangement12"><b>Entwurf 12 einschätzen</b></string>
            <string name="ourArrangementShowSketchCommentMenuSortDesc">Einschätzungen absteigend sortieren</string>
            <string name="ourArrangementShowSketchCommentMenuSortAsc">Einschätzungen aufsteigend sortieren</string>
            <string name="ourArrangementShowSketchCommentMenuCountCommentForList">Anzahl anzuzeigener Einschätzungen</string>
            <string name="ourArrangementSketchArrangementMenuSortDesc">Entwürfe absteigend sortieren</string>
            <string name="ourArrangementSketchArrangementMenuSortAsc">Entwürfe aufsteigend sortieren</string>
            <string name="ourArrangementSketchArrangementMenuNoArrangementAvailable">Keine Entwürfe vorhanden</string>
            <string name="ourArrangementSketchArrangementMenuFunctionOff">Die Funktion ist ausgeschaltet</string>
            <string name="popupItemOurGoalsJointlyGoal1"><b>Gemeinsames Ziel 1 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal2"><b>Gemeinsames Ziel 2 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal3"><b>Gemeinsames Ziel 3 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal4"><b>Gemeinsames Ziel 4 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal5"><b>Gemeinsames Ziel 5 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal6"><b>Gemeinsames Ziel 6 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal7"><b>Gemeinsames Ziel 7 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal8"><b>Gemeinsames Ziel 8 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal9"><b>Gemeinsames Ziel 9 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal10"><b>Gemeinsames Ziel 10 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal11"><b>Gemeinsames Ziel 11 kommentieren</b></string>
            <string name="popupItemOurGoalsJointlyGoal12"><b>Gemeinsames Ziel 12 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal1"><b>Strittiges Ziel 1 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal2"><b>Strittiges Ziel 2 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal3"><b>Strittiges Ziel 3 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal4"><b>Strittiges Ziel 4 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal5"><b>Strittiges Ziel 5 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal6"><b>Strittiges Ziel 6 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal7"><b>Strittiges Ziel 7 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal8"><b>Strittiges Ziel 8 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal9"><b>Strittiges Ziel 9 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal10"><b>Strittiges Ziel 10 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal11"><b>Strittiges Ziel 11 kommentieren</b></string>
            <string name="popupItemOurGoalsDebetableGoal12"><b>Strittiges Ziel 12 kommentieren</b></string>
            <string name="faqOverviewIntroText">In dem Bereich Frequently Asked Question (FAQ) versuchen wir Ihnen einige Antworten auf häufig gestellte Fragen zu geben.</string>
            <string name="faqOverviewSectionTwoTitleText"><a href="smart.efb.deeplink://linkin/faq?com=show_section2">Fragen zur App</a></string>
            <string name="faqOverviewSectionTwoInfoText">In diesem Bereich finden Sie häufig gestellte Fragen über und zur App.</string>
            <string name="faqOverviewSectionThreeTitleText"><a href="smart.efb.deeplink://linkin/faq?com=show_section3">Erziehungsberatung (EB)</a></string>
            <string name="faqOverviewSectionThreeInfoText">Hier geht es um Fragen und Anworten um das Thema Erziehungsberatung. Welche Aufgaben diese erfüllt oder welche Themen besprochen werden können.</string>
            <string name="faqOverviewSectionFourTitleText"><a href="smart.efb.deeplink://linkin/faq?com=show_section4">Beratungsstellen</a></string>
            <string name="faqOverviewSectionFourInfoText">Die Mitarbeiterinnen und Mitarbeiter unserer Beratungsstellen zeigen Ihnen die Beratungsstellen.</string>
            <string name="faqOverviewSectionFiveTitleText"><a href="smart.efb.deeplink://linkin/faq?com=show_section5">Erziehungsfragen</a></string>
            <string name="faqOverviewSectionFiveInfoText">Wir versuchen Ihnen einige häufig gestellte Fragen zur Erziehung zu beantworten.</string>
            <string name="faqOverviewSectionOneEndText">Sollte eine Frage fehlen, zögern Sie nicht und <a href="smart.efb.deeplink://linkin/settings?com=show_contact">rufen</a> Sie uns an oder schreiben Sie uns eine <a href="smart.efb.deeplink://linkin/settings?com=show_contact">Email</a>.</string>
</resources>