<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/arrangement1"
        android:title="@string/popupItemOurArrangementSketchArrangement1"/>
    <item android:id="@+id/arrangement2"
        android:title="@string/popupItemOurArrangementSketchArrangement2"/>
    <item android:id="@+id/arrangement3"
        android:title="@string/popupItemOurArrangementSketchArrangement3"/>
    <item android:id="@+id/arrangement4"
        android:title="@string/popupItemOurArrangementSketchArrangement4"/>
    <item android:id="@+id/arrangement5"
        android:title="@string/popupItemOurArrangementSketchArrangement5"/>
    <item android:id="@+id/arrangement6"
        android:title="@string/popupItemOurArrangementSketchArrangement6"/>
    <item android:id="@+id/arrangement7"
        android:title="@string/popupItemOurArrangementSketchArrangement7"/>
    <item android:id="@+id/arrangement8"
        android:title="@string/popupItemOurArrangementSketchArrangement8"/>
    <item android:id="@+id/arrangement9"
        android:title="@string/popupItemOurArrangementSketchArrangement9"/>
    <item android:id="@+id/arrangement10"
        android:title="@string/popupItemOurArrangementSketchArrangement10"/>
    <item android:id="@+id/arrangement11"
        android:title="@string/popupItemOurArrangementSketchArrangement11"/>
    <item android:id="@+id/arrangement12"
        android:title="@string/popupItemOurArrangementSketchArrangement12"/>
</menu>