<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/our_arrangement_menu_fragment_sketch_show_comment_sort_desc"
        app:showAsAction="never"
        android:title="@string/ourArrangementShowSketchCommentMenuSortDesc" />

    <item
        android:id="@+id/our_arrangement_menu_fragment_sketch_show_comment_sort_asc"
        app:showAsAction="never"
        android:title="@string/ourArrangementShowSketchCommentMenuSortAsc" />

    <item
        android:id="@+id/our_arrangement_menu_fragment_sketch_count_comment_in_recycler_view"
        app:showAsAction="never"
        android:title="@string/ourArrangementShowSketchCommentMenuCountCommentForList" />

</menu>